# prompttest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
prompts/: customer_service.txt  social_media_post.txt
prompttests/: main.yml  prompttest.yml  secondary.yml
prompttests/social/: social_media.yml
src/prompttest/: cli.py  discovery.py  llm.py  models.py  reporting.py  runner.py  ui.py
tests/: conftest.py  test_cli_additional_cases.py  test_cli_errors.py  test_cli_gitignore.py  test_cli_init.py  test_cli_patterns_and_filters.py  test_cli_run.py  test_discovery_additional_cases.py  test_discovery_anchors_and_paths.py  test_discovery_merge_and_errors.py  test_integration_user_journey.py  test_performance.py  test_performance_scaling.py  test_real_world_scenarios.py  test_reporting_and_ui.py  test_reporting_edge_cases.py  test_runner_additional_branches.py  test_runner_branches.py  test_runner_end_to_end.py  test_runner_error_branches.py  test_runner_more_paths.py
tests/cli/: test_cli_additional_cases.py  test_default_callback_with_patterns_nonzero.py  test_init_gitignore.py  test_patterns_and_filters.py  test_run_and_default.py
tests/discovery/: test_anchor_dupes_with_ellipsis.py  test_anchors_and_paths.py  test_discovery_additional_cases.py  test_no_config_files_path.py
tests/integration/: test_real_world_scenarios.py
tests/llm/: test_api_errors.py  test_more_error_paths.py  test_parse_format_edge_cases.py  test_structured_paths.py  test_unit_and_cache.py
tests/performance/: test_init_performance.py
(+14 files in other folders)
